# QQAiPicBot

./: .gitignore  README.md  __init__.py  config.ini  main.py  pyproject.toml  requirements.txt
modules/: _chat.py  menu.py  semembertu.py  setu.py
