[project]
name = "QQAiPicBot"
version = "0.0.1"
authors = [{ name = "KomaruNeko" }]
description = "QQ stable diffusion local bot "
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
requires = ["stable-diffusion-webui", "mirai-console-loader"]
dependencies = [
    "cpm_kernels>=1.0.11",
    "creart>=0.2.2",
    "graia-ariadne[standard]==0.11.2",
    "graia-saya==0.0.17",
    "icetk>=0.0.4",
    "numpy>=1.21.2",
    "Pillow>=8.4.0",
    "pypinyin",
    "requests>=2.28.2",
    "setuptools",
    "tensorflow",
    "torch",
    "transformers",
    "translate",
    
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
